Bug 308093 - Okular crashed right after the first start after being compiled
Summary: Okular crashed right after the first start after being compiled
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
: 308094 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-08 21:17 UTC by Tobias
Modified: 2012-10-08 22:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias 2012-10-08 21:17:34 UTC
Application: okular (0.15.70)
KDE Platform Version: 4.8.5 (4.8.5)
Qt Version: 4.8.1
Operating System: Linux 3.2.0-31-generic x86_64
Distribution: Ubuntu 12.04.1 LTS

-- Information about the crash:
- What I was doing when the application crashed: Started Okular from the Terminal. Before I compile version 8ab768 from Tue Jul 10 17:45:23 2012 +0100.

-- Backtrace:
Application: Okular (okular), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f4fe7e1c780 (LWP 6478))]

Thread 3 (Thread 0x7f4fd3a53700 (LWP 6503)):
#0  0x00007f4fe1e3e5e8 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f4fe1e027e2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f4fe1e02f5b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4fe1e0349a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f4fd3a5898b in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#5  0x00007f4fe1e249e5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f4fe22cfe9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#7  0x00007f4fe5005dbd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#8  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f4fd3252700 (LWP 6504)):
#0  0x00007f4fe22d1f69 in pthread_mutex_lock () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f4fe1e3e5a1 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f4fe1e02c36 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4fe1e030a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f4fe1e0349a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f4fdabaa406 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#6  0x00007f4fe1e249e5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f4fe22cfe9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#8  0x00007f4fe5005dbd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f4fe7e1c780 (LWP 6478)):
[KCrash Handler]
#6  0x00007f4fe701ce37 in KRecentFilesAction::loadEntries(KConfigGroup const&) () from /usr/lib/libkdeui.so.5
#7  0x0000000000409849 in Shell::readSettings (this=0xe37290) at /home/john/Repositories/okular/shell/shell.cpp:149
#8  0x0000000000409beb in Shell::init (this=0xe37290) at /home/john/Repositories/okular/shell/shell.cpp:105
#9  0x0000000000409e31 in Shell::Shell (this=0xe37290, args=<optimized out>, argIndex=-1, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /home/john/Repositories/okular/shell/shell.cpp:61
#10 0x0000000000407cde in main (argc=<optimized out>, argv=<optimized out>) at /home/john/Repositories/okular/shell/main.cpp:72

Reported using DrKonqi
Comment 1 Albert Astals Cid 2012-10-08 21:20:56 UTC
Did you compile against your system kdelibs? did you set your KDEDIRS envvar?
Comment 2 Albert Astals Cid 2012-10-08 21:32:19 UTC
*** Bug 308094 has been marked as a duplicate of this bug. ***
Comment 3 Albert Astals Cid 2012-10-08 21:53:12 UTC
Git commit 50b9424577d4451661fa35d0d7a3918bbb0eeec0 by Albert Astals Cid.
Committed on 08/10/2012 at 23:51.
Pushed by aacid into branch 'KDE/4.9'.

Don't crash if can't create the part

It can fail in some extreme cases

M  +12   -13   shell/shell.cpp

http://commits.kde.org/okular/50b9424577d4451661fa35d0d7a3918bbb0eeec0
Comment 4 Tobias 2012-10-08 22:10:31 UTC
(In reply to comment #1)
> Did you compile against your system kdelibs? did you set your KDEDIRS envvar?
I compiled the sources using the following command:
cmake ../ -DCMAKE_INSTALL_PREFIX=~/okular-install -DCMAKE_BUILD_TYPE="Debug" -DFREETYPE_INCLUDE_DIR=/usr/include/freetype2/freetype
Comment 5 Albert Astals Cid 2012-10-08 22:12:34 UTC
which doesn't answer the question if you set your kdedirs envvar, or probably means you didn't?

Read the last bit of http://okular.kde.org/download.php

Pull from git and this crash will go away (you'll still get a non working okular without the KDEDIRS thing though)
Comment 6 Tobias 2012-10-08 22:20:42 UTC
I run `export KDEDIRS=~/okular-install/bin/okular:$(kde4-config --prefix); kbuildsycoca4` but it does hinder Okular from crashing.
Comment 7 Albert Astals Cid 2012-10-08 22:40:38 UTC
If it does hinder okular from crashing all is good, no? Or you mean it still crashes?
Comment 8 Tobias 2012-10-08 22:47:45 UTC
It does not hinder Okular from crashing. Sorry for the typo.
Comment 9 Albert Astals Cid 2012-10-08 22:52:10 UTC
the KDEDIRS is wrong, does ~/okular-install/bin/okular seem something that is worth of being named "KDEDIRS"?

KDEDIRS should be ~/okular-install that is where you told cmake to install okular, also not sure if the ~ will work so give it a manual substitution just in case
Comment 10 Tobias 2012-10-08 22:56:52 UTC
Finally `export KDEDIRS=~/okular-install:$(kde4-config --prefix); kbuildsycoca4` works. Sorry, but the path was not totally understandable for me from the website. Thank you!