Don't crash if can't create the part

It can fail in some extreme cases
BUG: 308093